--- a/ict.html
+++ b/ict.html
@@ -37,7 +37,7 @@ body {
 <body background="bg.JPG">
 
 <div class="adiv">
-<img src="header.JPG" height="100" width="400">
+<center> </center><img src="header.JPG" height="100" width="400"> </center>
 
 <p> (Note: This form as well as the publication is fictional, but articles from our editorial board may be published, if you wish to unsubscribe, feel free to block our gmail account or refrain from checking the box at the very end.) </p>
 
