--- a/ict.html
+++ b/ict.html
@@ -124,7 +124,7 @@ body {
 <input type="text" name="email"> </input>
 <br>
 <br>
-<input type="submit"> </input> <br> 
+<input class="button" type="submit"> </input> <br> 
 <br>
 
 
